feat: тесты InMemoryHistoryManagerTest